# guitar_tuner

./: Cargo.toml  README.md
examples/: autocorrelation.rs  correlation.rs  feedback.rs  simple_tuner.rs  simple_tuner_works.rs  tuner.rs  zero_crossing_high.rs  zero_crossing_high2.rs  zero_crossing_low.rs
figures/: correlation.drawio  wave.drawio
nrf52840/rtic_app/: Cargo.toml  Embed.toml  README.md
nrf52840/rtic_app/.cargo/: config.toml
nrf52840/rtic_app/examples/: rtic_saadc.rs  rtic_saadc_raw.rs  rtic_tuner.rs
nrf52840/rtic_app/octave/: data.txt  data2.txt  data3.txt  dhigh.txt  dlow.txt
src/: lerp.rs
